--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-handlegraph = "0.6.0"
+handlegraph = "0.5.0"
 gfa = "0.8.0"
 clap = "2.33.3"
+bstr = "0.2.15"
