--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ bv = "0.11.1"
 rayon = "1.5.0"
 # Minimal Perfect Hash Funnction, it's bbhash with another name
 boomphf = "0.5.9"
+substring = "1.4.5"
