--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ rayon = "1.5.0"
 # Minimal Perfect Hash Funnction, it's bbhash with another name
 boomphf = "0.5.9"
 substring = "1.4.5"
+ahash = "0.7.2"
