--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ boomphf = "0.5.9"
 
 substring = "1.4.5"
 ahash = "0.7.2"
-bincode = "1.3.3"
+
 serde = "1.0.125"
+bincode = "1.3.3"
+serde_json = "1.0"
 serde_with = "1.8.1"
+bitvector = "0.1.5"
