--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 handlegraph = "0.5.0"
 gfa = "0.8.0"
-clap = "2.33.3"
+clap = {version = "2.33.3", features = ["yaml"]}
 bstr = "0.2.15"
 bv = "0.11.1"
 rayon = "1.5.0"
