--- a/src/subcommands/cli.yml
+++ b/src/subcommands/cli.yml
@@ -47,12 +47,83 @@ subcommands:
             required: false
             takes_value: true
   - map:
-        about: map the reads against the index
+        about: map sequences to a graph
         args:
             - input:
                   short: i
-                  long: input
+                  long: index
                   value_name: FILE
-                  help: Sets the input file to use
+                  help: Load the index from this prefix
                   required: true
                   takes_value: true
+            - input-file:
+                short: f
+                long: input-file
+                value_name: FILE
+                help: Input file, either FASTA or FASTQ, optionally gzipped, multiple allowed
+                required: true
+                takes_value: true
+            - query-seq:
+                short: s
+                long: query-seq
+                value_name: FILE
+                help: query one sequence
+                required: true
+                takes_value: true
+            - max-gap-length:
+                short: g
+                long: max-gap-length
+                value_name: INTEGER
+                help: maximum gap length in chaining (default 1000)
+                required: false
+                takes_value: true
+            - max-mismatch-rate:
+                short: r
+                long: max-mismatch-rate
+                value_name: FLOAT
+                help: maximum allowed mismatch rate (default 0.1)
+                required: false
+                takes_value: true
+            - chain-overlap-max:
+                short: c
+                long: chain-overlap-max
+                value_name: FLOAT
+                help: maximum allowed mismatch rate (default 0.1)
+                required: false
+                takes_value: true
+            - chain-min-anchors:
+                short: a
+                long: chain-min-anchors
+                value_name: INTEGER
+                help: minimum number of anchors in a chain (default 3)
+                required: false
+                takes_value: true
+            - align-best-n:
+                short: n
+                long: align-best-n
+                value_name: INTEGER
+                help: align the best N superchains
+                required: false
+                takes_value: true
+            - write-chains:
+                short: C
+                long: write-chains
+                help: write chains for each alignment
+                required: false
+                takes_value: false
+            - write-superchains:
+                short: S
+                long: write-superchains
+                help: write superchains for each alignment
+                required: false
+                takes_value: false
+            - dont_align:
+                short: D
+                long: dont-align
+                help: don't align, just chain
+                required: false
+                takes_value: false
+
+
+
+
