--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ boomphf = {version = "0.5.9", features = ["serde"]}
 
 substring = "1.4.5"
 ahash = "0.7.2"
+itertools = "0.10.1"
 
 serde = "1.0.125"
 bincode = "1.3.3"
