--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ substring = "1.4.5"
 ahash = "0.7.2"
 itertools = "0.10.1"
 
+# Used in the index (IITree = Implicit Interval Tree)
+bio = "0.37.0"
+
 serde = "1.0.125"
 bincode = "1.3.3"
 serde_json = "1.0"
