--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ itertools = "0.10.1"
 # Used in the index (IITree = Implicit Interval Tree)
 bio = "0.37.0"
 
+float-cmp = "0.9.0"
+
 serde = "1.0.125"
 bincode = "1.3.3"
 serde_json = "1.0"
