--- a/src/subcommands/cli.yml
+++ b/src/subcommands/cli.yml
@@ -20,7 +20,7 @@ subcommands:
             takes_value: true
         - out-prefix:
             short: o
-            long: out
+            long: output
             value_name: STRING
             help: Save our index with this prefix (defaults to input file name and path)
             required: false
@@ -63,12 +63,19 @@ subcommands:
                 help: Input file, either FASTA or FASTQ, optionally gzipped, multiple allowed
                 required: true
                 takes_value: true
+            - out-prefix:
+                  short: o
+                  long: out
+                  value_name: STRING
+                  help: Save the alignment with this prefix (defaults to input file name and path)
+                  required: false
+                  takes_value: true
             - query-seq:
                 short: s
                 long: query-seq
                 value_name: FILE
                 help: query one sequence
-                required: true
+                required: false
                 takes_value: true
             - max-gap-length:
                 short: g
