--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ bincode = "1.3.3"
 serde_json = "1.0"
 serde_with = "1.8.1"
 bitvector = "0.1.5"
+
+# abpoa partial order aligner
+ab_poa = { git = "https://github.com/HopedWall/rs-abPOA" }
