Now uses the whole query when performing POA

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ bitvector = "0.1.5"
 
 # abpoa partial order aligner
 ab_poa = { git = "https://github.com/HopedWall/rs-abpoa"}
+#ab_poa = { path = "../rs-abPOA"}
