--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ bio = "0.37.0"
 
 float-cmp = "0.9.0"
 
-serde = "1.0.125"
+serde = {version = "1.0.125", features = ["derive"]}
 bincode = "1.3.3"
 serde_json = "1.0"
 serde_with = "1.8.1"
@@ -39,3 +39,6 @@ ab_poa = { git = "https://github.com/HopedWall/rs-abpoa"}
 # profiling
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
 env_logger = "0.9.0"
+
+# validation
+json = "0.12.4"
