--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,13 @@ bitvector = "0.1.5"
 
 # abpoa partial order aligner
 ab_poa = { git = "https://github.com/HopedWall/rs-abpoa"}
-#ab_poa = { path = "../rs-abPOA"}
 
 # profiling
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
 env_logger = "0.9.0"
+
+# mocking
+mockall = "0.11.0"
 
 # validation
 json = "0.12.4"
