--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde_with = "1.8.1"
 bitvector = "0.1.5"
 
 # abpoa partial order aligner
-ab_poa = { git = "https://github.com/HopedWall/rs-abpoa"}
+ab_poa = { git = "https://github.com/HopedWall/rs-abpoa", rev = "d2200bf"}
 
 # profiling
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
