--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = {version = "2.33.3", features = ["yaml"]}
 bstr = "0.2.15"
 bv = "0.11.1"
 #rayon = "1.5.0"
+regex = "1"
 
 # Minimal Perfect Hash Funnction, it's bbhash with another name
 boomphf = {version = "0.5.9", features = ["serde"]}
