--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ serde_with = "1.8.1"
 bitvector = "0.1.5"
 
 # abpoa partial order aligner
-#ab_poa = {git = "https://github.com/HopedWall/rs-abpoa"}
-ab_poa = {path = "../rs-abPOA"}
+ab_poa = {git = "https://github.com/HopedWall/rs-abpoa"}
+#ab_poa = {path = "../rs-abPOA"}
 seal = {git = "https://github.com/regexident/rust-seal"}
 rspoa = {git = "https://github.com/AlgoLab/rspoa"}
 
